--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.app-page {
+	text-align: center;
+	background-color: #01012B;
+	min-height: 100vh;
+	font-family: 'Orbitron', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.top-menu {
+	max-width: 95%;
+	margin: auto;
+	color: #FF2A6D;
+	background-color: #01012B;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+	width: 20%;
+	height: 200px;
+	border-radius: 2mm;
+	margin: 15px;
+	vertical-align: baseline;
+	/* background-color: #D1F7FF; */
+	/* background-color: #005678; */
+	background-color: #05D9E8;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.w3-bar-block .w3-bar-item {
+	padding: 20px
 }
