--- a/src/components/card.css
+++ b/src/components/card.css
@@ -3,12 +3,11 @@
 	height: 25vh;
 	align-items: center;
 	justify-content: center;
-	/* border:1px solid red; */
 }
 
-.article-card {
-	width: 500px;
-	height: 270px;
+.item-card {
+	width: 400px;
+	height: 200px;
 	border-radius: 5px;
 	overflow: hidden;
 	position: relative;
@@ -19,18 +18,26 @@
 	text-align: left;
 }
 
-.article-card:hover {
+.item-card:hover {
 	transform: translateY(-5px);
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.article-card img {
+.item-card img {
+	width: 75%;
+	height: 75%;
+	object-fit: cover;
+	position: absolute;
+}
+
+.item-card > img:first-child {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	z-index: 0;
 }
 
-.article-card .content {
+.item-card .content {
 	box-sizing: border-box;
 	width: 100%;
 	position: absolute;
@@ -40,18 +47,15 @@
 	background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
 }
 
-.article-card .subtitle,
-.article-card .title {
+.item-card .class {
+	font-size: 12px;
+	color: rgba(255, 255, 255, 0.5);
+	margin-bottom: 4px;
 	margin: 0;
 }
 
-.article-card .subtitle {
-	font-size: 12px;
-	color: rgba(255, 255, 255, 0.9);
-	margin-bottom: 4px;
-}
-
-.article-card .title {
+.item-card .title {
 	font-size: 17px;
 	color: #fff;
+	margin: 0;
 }
