--- a/src/components/card.css
+++ b/src/components/card.css
@@ -6,7 +6,7 @@
 }
 
 .item-card {
-	width: 400px;
+	width: 320px;
 	height: 200px;
 	border-radius: 5px;
 	overflow: hidden;
@@ -14,7 +14,6 @@
 	font-family: 'Orbitron', sans-serif;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	transition: all 300ms;
-	background-color: #FDF500;
 	text-align: left;
 }
 
@@ -24,16 +23,22 @@
 }
 
 .item-card img {
-	width: 75%;
-	height: 75%;
-	object-fit: cover;
+	width: 300px;
+	height: 150px;
 	position: absolute;
+	top:50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
 }
 
 .item-card > img:first-child {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	position: absolute;
+	top:50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
 	z-index: 0;
 }
 
