--- a/src/components/card.css
+++ b/src/components/card.css
@@ -11,7 +11,7 @@
 	border-radius: 5px;
 	overflow: hidden;
 	position: relative;
-	font-family: 'Orbitron', sans-serif;
+	font-family: "Orbitron", sans-serif;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	transition: all 300ms;
 	text-align: left;
@@ -26,17 +26,17 @@
 	width: 300px;
 	height: 150px;
 	position: absolute;
-	top:50%;
+	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 }
 
-.item-card > img:first-child {
+.item-card>img:first-child {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	position: absolute;
-	top:50%;
+	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	z-index: 0;
