--- a/src/components/card.css
+++ b/src/components/card.css
@@ -13,19 +13,27 @@
 	position: relative;
 	font-family: "Orbitron", sans-serif;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-	transition: all 300ms;
+	transition: all 100ms;
 	text-align: left;
+	cursor: pointer;
 }
 
 .item-card:hover {
-	transform: translateY(-5px);
+	transform: scale(1.02);
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	
+	.title, .class {
+		color: #ffffff;
+	}
 }
 
-.item-card img {
+.item-card > img {
 	width: 300px;
 	height: 150px;
 	position: absolute;
+}
+
+.centered {
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
@@ -34,11 +42,8 @@
 .item-card>img:first-child {
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	/* object-fit: cover; */
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
 	z-index: 0;
 }
 
@@ -49,18 +54,52 @@
 	padding: 30px 20px 20px 20px;
 	height: auto;
 	bottom: 0;
-	background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
+	background: linear-gradient(transparent, rgba(0, 0, 0, 0.9));
 }
 
 .item-card .class {
 	font-size: 12px;
-	color: rgba(255, 255, 255, 0.5);
+	color: #ffffff20;
 	margin-bottom: 4px;
 	margin: 0;
 }
 
 .item-card .title {
 	font-size: 17px;
-	color: #fff;
+	color: #ffffff20;
 	margin: 0;
+}
+
+.unselectable {
+	user-select: none;
+}
+
+.unclickable {
+	cursor: not-allowed;
+}
+
+.error {
+	top: 12%;
+	left: 2.5%;
+}
+
+.ghosting {
+	top: 12%;
+	left: 2.5%;
+	animation: ghosting-animation .5s infinite;
+	opacity: 0.3;
+}
+
+@keyframes ghosting-animation {
+	0%   { transform: translate(+0%, +0%) }
+	10%  { transform: translate(-1%, -1%) }
+	20%  { transform: translate(-3%, +2%) }
+	30%  { transform: translate(+2%, -3%) }
+	40%  { transform: translate(-2%, +4%) }
+	50%  { transform: translate(-3%, +2%) }
+	60%  { transform: translate(+4%, +4%) }
+	70%  { transform: translate(+0%, +3%) }
+	80%  { transform: translate(-4%, +0%) }
+	90%  { transform: translate(+3%, +2%) }
+	100% { transform: translate(+2%, +0%) }
 }
